2020-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.cmd/set-oacutoff-2.pk: New test.
	* src/pvm-val.c (pvm_print_val): Apply acutoff also in arrays that
	are not inside other structs.

2020-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pk-set.c (pk_cmd_set_endian): Fix handling of optional
	argument.
	(pk_cmd_set_nenc): Likewise.
	(pk_cmd_set_omode): Likewise.

2020-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pk-cmd.c (pk_cmd_exec): Honour pvm_oacutoff when calling
	pvm_print_val.

2020-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pk-set.c (set_oacutoff_cmd): Make argument optional.
	(set_oindent_cmd): Likewise.
	(set_odepth_cmd): Likewise.
	(pk_cmd_set_oacutoff): Print the current array cutoff if the set
	command is invoked without arguments.
	(pk_cmd_set_odepth): Likewise.
	(pk_cmd_set_obase): Likewise.
	* testsuite/poke.cmd/set-oacutoff-1.pk: New test.
	* testsuite/poke.cmd/set-odepth-2.pk: Likewise.
	* testsuite/poke.cmd/set-obase-1.pk: Likewise.
	* testsuite/poke.cmd/set-obase-2.pk: Likewise.
	* testsuite/poke.cmd/set-obase-4.pk: Likewise.
	* testsuite/poke.cmd/set-obase-3.pk: Likewise.
	* testsuite/poke.cmd/set-obase-5.pk: Renamed from set-obase.pk.

2020-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-ast.h (PKL_AST_PRINT_STMT_ARG_PRINT_MODE): Define.
	(struct pkl_ast_print_stmt_arg): New field print_mode.
	(PKL_AST_PRINT_STMT_ARG_PRINT_DEPTH): Define.
	(struct pkl_ast_print_stmt_arg): New field print_depth.
	* src/pkl-trans.c (pkl_trans1_ps_print_stmt): Support for
	numerical prefix and flag T for the %v format tag.
	* src/pvm.jitter (printv): Accept two arguments MODE and DEPTH.
	* src/pkl-insn.def: Annotate printv to get two numerical
	arguments.
	* src/pkl-gen.c (pkl_gen_pr_print_stmt): Emit a printv
	instruction with the right mode and depth.
	* src/pvm-val.h (PVM_PRINT_F_DEPTH): Define.
	(PVM_PRINT_F_GET_DEPTH): Likewise.
	(PVM_PRINT_F_MODE): Likewise.
	(PVM_PRINT_F_GET_MODE): Likewise.