@@ -36,6 +36,77 @@
 #include <unistd.h>
 
 static char *
+pkl_complete_struct (int *idx, const char *x, size_t len, int state)
+{
+  static pkl_ast_node type;
+  pkl_ast_node t;
+  char *trunk;
+  int j;
+
+  if (state == 0)
+    {
+      pkl_env compiler_env;
+      int back, over;
+      char *base;
+
+      compiler_env = pkl_get_env (poke_compiler);
+      base = strndup (x, len - strlen (strchr (x, '.')));
+
+      type = pkl_env_lookup (compiler_env, base, &back, &over);
+      free (base);
+
+      if (type == NULL || PKL_AST_DECL_KIND (type) != PKL_AST_DECL_KIND_VAR)
+        return NULL;
+
+      type = PKL_AST_TYPE (PKL_AST_DECL_INITIAL (type));
+      type = pkl_struct_type_traverse (type, x);
+      if (type == NULL)
+        return NULL;
+    }
+
+  trunk = strndup (x, len - strlen (strrchr (x, '.')));
+  t = PKL_AST_TYPE_S_ELEMS (type);
+
+  for (j = 0; j < (*idx); j++)
+    t = PKL_AST_CHAIN (t);
+
+  for (; t; t = PKL_AST_CHAIN (t), (*idx)++)
+    {
+      pkl_ast_node ename;
+      char *field, *name;
+
+      if (PKL_AST_CODE (t) != PKL_AST_STRUCT_TYPE_FIELD)
+        continue;
+
+      ename = PKL_AST_STRUCT_TYPE_FIELD_NAME (t);
+
+      if (ename)
+          field = PKL_AST_IDENTIFIER_POINTER (ename);
+      else
+          field = "<unnamed field>";
+
+      name = xmalloc (strlen (trunk) + strlen (field) + 2);
+
+      strcpy (name, trunk);
+      strcat (name, ".");
+      strcat (name, field);
+
+      if (0 != strncmp (x, name, len))
+        {
+          free (name);
+          continue;
+        }
+
+      (*idx)++;
+      free (trunk);
+      return name;
+    }
+
+  free (trunk);
+  return NULL;
+}
+
+static char *
 poke_completion_function (const char *x, int state)
 {
   static int idx = 0;
@@ -55,6 +126,10 @@ poke_completion_function (const char *x, int state)
     }
 
   size_t len = strlen (x);
+
+  if ((x[0] != '.') && (strchr(x, '.') != NULL))
+    return pkl_complete_struct (&idx, x, len, state);
+
   char *function_name;
   function_name = pkl_env_get_next_matching_decl (env, &iter, x, len);
   if (function_name)
